commented out the carousel feature

--- a/src/app/layout/carousel/carousel/carousel.component.html
+++ b/src/app/layout/carousel/carousel/carousel.component.html
@@ -1,1 +1,13 @@
-<p>carousel works!</p>
+
+<!-- <ngb-carousel *ngIf="images.length">
+  <ng-template ngbSlide *ngFor="let img of images; let i = index">
+    <img [src]="img" class="d-block w-100" [alt]="'Slide ' + (i + 1)" alt="Imgae slider"/>
+  </ng-template>
+</ngb-carousel> -->
+
+<!-- <img src="./img/carousel/slider1.jpg" alt="image slider" />
+ -->
+
+
+
+
