--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -8,9 +8,9 @@
 </header>
 
 <!-- carousel grid-area -->
-<section id="grid-area-carousel" class="grid-area-carousel">
+<!-- <section id="grid-area-carousel" class="grid-area-carousel">
     <app-carousel></app-carousel>
-</section>
+</section> -->
 
 <!-- navigation grid-area -->
 <nav id="grid-area-navbar" class="grid-area-navbar">
@@ -24,8 +24,8 @@
 
 <!-- main content grid-area -->
 <main id="grid-area-main-content" class="grid-area-main-content">
-    <h1>Under Construction</h1>
-     <h3>Please note that this portfolio is still under construction</h3>
+
+     Cards and a statement here..
 </main>
 
 <!-- footer grid-area -->
