--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -11,11 +11,11 @@
 
 
   display: grid;
-  gap: 5px;
+  row-gap: 5px;
   grid-template-columns: 1fr;
   grid-template-areas: "header"
     "navbar"
-    "carousel"
+    // "carousel"
     "page-intro"
     "main-content"
     "footer";
@@ -35,10 +35,11 @@
   grid-area: header;
 }
 
-.grid-area-carousel {
-  grid-area: carousel;
-  background-color: $light-primary-bg-color;
-}
+// .grid-area-carousel {
+//   grid-area: carousel;
+//   background-color: $light-primary-bg-color;
+
+// }
 
 .grid-area-navbar {
   grid-area: navbar;
@@ -69,7 +70,7 @@
     .site-grid-container {
         grid-template-areas:"navbar"
                             "header"
-                            "carousel"
+                            // "carousel"
                             "page-intro"
                             "main-content"
                             "footer";
