Scaffolded the project components

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -13,9 +13,8 @@
         />
         <span class="introduction-text"
           >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
-          this portfolio you will find a collection of my work and
-          projects that showcase my skills as a Front-End
-          Developer.</span
+          this portfolio you will find a collection of my 
+          projects that showcase my skills.</span
         >
       </p>
     </div>
