--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,6 +6,7 @@
     grid-template-columns: 1fr 2fr;
     justify-content: space-between;
     padding: 10px 0;
+    // border: 1px solid $light-border-color;
     text-align: left;
     .site-names {
 
