--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -6,12 +6,12 @@
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: $spacing-md;
+  padding: $spacing-md - 2px;
   text-align: center;
 
 
   display: grid;
-  row-gap: 5px;
+  row-gap: 25px;
   grid-template-columns: 1fr;
   grid-template-areas: "header"
     "navbar"
