added page introduction layout

--- a/src/app/layout/grid-layout/grid-layout.component.html
+++ b/src/app/layout/grid-layout/grid-layout.component.html
@@ -7,6 +7,7 @@
     <app-site-identity></app-site-identity>
 </header>
 
+
 <!-- carousel grid-area -->
 <!-- <section id="grid-area-carousel" class="grid-area-carousel">
     <app-carousel></app-carousel>
@@ -25,7 +26,7 @@
 <!-- main content grid-area -->
 <main id="grid-area-main-content" class="grid-area-main-content">
 
-     Cards and a statement here..
+     <router-outlet />
 </main>
 
 <!-- footer grid-area -->
