--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -1,1 +1,13 @@
-<p>page-introduction works!</p>
+<div id="page-instroduction" class="page-instroduction">
+  <div class="page-title">{{ pageTitle }}</div>
+  <div class="page-heading">
+    {{ pageHeading }}
+  </div>
+  <div class="page-description">
+    {{ pageDesc }}
+  </div>
+  <div class="page-intro-buttons">
+    <button name="projects" class="button projects" type="button">projects</button>
+    <button name="contact" class=" button contact" type="button">get in-touch</button>
+  </div>
+</div>
