--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,6 +2,8 @@
 
 /* -- LIGHT THEME COLORS -- */
 
+$light-neutral-font-color: #ffffff;
+
 //Light Primary - Font and color variables
 $light-default-font-color: #415a77;
 $light-primary-font-color: #284b63;
@@ -59,7 +61,8 @@ $font-size-xs: 10px;
 $font-size-sm: 12px;
 $font-size-md: 14px;
 $font-size-lg: 18px;
-$font-size-xl: 32px;
+$font-size-xl: 26px;
+$font-size-xxl: 32px;
 
 //Spacing variables
 $spacing-xs: 4px;
