renamed tech stack hyperlink

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -15,7 +15,7 @@ $light-default-bg-color: #ffffff;
 $light-primary-bg-color: #f8f9fa;
 $light-secondery-bg-color: #e5e5e5;
 $light-tertiary-bg-color: #778da9;
-$light-tertiary-bg-color: #284b63;
+$light-dark-bg-color: #284b63;
 
 
 
