--- a/src/app/layout/navbar/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar/navbar.component.html
@@ -1,4 +1,3 @@
-
 <div id="main-navbar">
 <nav class="navbar">
 
@@ -12,10 +11,9 @@
     <li><a routerLink="/">Home</a></li>
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/projects">Projects</a></li>
-    <li><a routerLink="/tech-stack">Tech-Stack</a></li>
+    <li><a routerLink="/tech-stack">Tech Stack</a></li>
     <li><a routerLink="/contact">Contact</a></li>
   </ul>
+
 </nav>
 </div>
-
-
