Added home page content grid

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -1,1 +1,155 @@
-<p>home works!</p>
+<div id="homepage-containter" class="homepage-containter">
+  <div class="homepage-content-section cards-container">
+    <div class="card card-ui">
+      <div class="card-icon">
+        <i class="bi bi-code-slash"></i>
+      </div>
+      <div class="card-title">ui Designs</div>
+      <div class="card-description">
+        Designing responsive mobile-friendly UI .
+      </div>
+      <div class="card-button">
+        <button name="explore-1" class="explore" type="button">explore</button>
+      </div>
+    </div>
+
+    <div class="card card-api">
+      <div class="card-icon">
+        <i class="bi bi-plug"></i>
+      </div>
+      <div class="card-title">restful api</div>
+      <div class="card-description">
+        Integrating and processing real-time data
+      </div>
+      <div class="card-button">
+        <button name="explore-2" class="explore" type="button">explore</button>
+      </div>
+    </div>
+
+    <div class="card card-test">
+      <div class="card-icon">
+        <i class="bi bi-flask-florence"></i>
+      </div>
+      <div class="card-title">unit testing</div>
+      <div class="card-description">Writing optimized and quality code.</div>
+      <div class="card-button">
+        <button name="explore-3" class="explore" type="button">explore</button>
+      </div>
+    </div>
+
+    <div class="card card-git">
+      <div class="card-icon">
+        <i class="bi bi-github"></i>
+      </div>
+      <div class="card-title">Source control</div>
+      <div class="card-description">Tracking source changes and updates.</div>
+      <div class="card-button">
+        <button name="explore-4" class="explore" type="button">explore</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="homepage-content-section horizontal-line">
+  </div>
+
+  <div class="homepage-content-section feeds-container">
+ 
+    <div class="recent-project-container feed">
+      <div class="recent-project-img">
+        <img
+          class="project-img"
+          src="./img/projects/prj-mabunda.png"
+          alt="recent project"
+        />
+        <div class="project-img-buttons details">
+          <span class="img-button github"
+            ><i class="bi bi-github"></i> GitHub</span
+          >
+          <span class="img-button view"
+            ><i class="bi bi-cursor"></i> website</span
+          >
+        </div>
+      </div>
+
+      <div class="project-details">
+        <div class="prject-name details">recently completed project</div>
+        <div class="project-description details">
+          <i class="bi bi-pin-fill"></i> Mabunda Group
+        </div>
+        <div class="tech-stack details">
+          <div class="project-tech">Technologies</div>
+          <div class="project-tech-item">
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> HTML5</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> CSS3</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> SCSS</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> Bootstrap</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> SEO</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> Font Awesome</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> Angular</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> RESTful API</span
+            >
+            <span class="tech-item"
+              ><i class="bi bi-check-circle-fill"></i> GitHub</span
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="news-feed-container feed">
+      <div class="feed-title">news headlines</div>
+      <div class="news-container">
+
+        <div class="news">
+          <img class="news-img" src="./img/misc/19.jpg" alt="recent project" />
+          <div class="news-headline">accident - n14</div>
+          <!-- <div class="button-container">
+            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
+          </div> -->
+        </div>
+
+        <div class="news">
+          <img class="news-img" src="./img/misc/mchunu2.jpg" alt="recent project" />
+          <div class="news-headline">mchunu scandal</div>
+          <!-- <div class="button-container">
+            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
+          </div> -->
+        </div>
+
+        <div class="news">
+          <img class="news-img" src="./img/misc/108.jpg" alt="recent project" />
+          <div class="news-headline">scammers arrest</div>
+          <!-- <div class="button-container">
+            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
+          </div> -->
+        </div>
+        
+      </div>
+      <div class="weather-container">
+        <span class="weather-item title">Weather: </span>
+         <span class="weather-item"><i class="bi bi-calendar-minus"></i> 26-07-2025 </span>
+         <span class="weather-item"> <i class="bi bi-thermometer-half"></i> 22 °C</span> 
+          <span class="weather-item"> <i class="bi bi-cloud-sun"></i> Clear Sky </span>
+          <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span> 
+        
+        
+      </div>
+    </div>
+    
+  </div>
+</div>
