--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -6,11 +6,11 @@
         introduction
       </h4>
       <p>
-        <img
+        <!-- <img
           class="introduction-img"
           src="./img/developer/yingi.png"
           alt="Site Logo"
-        />
+        /> -->
         <span class="introduction-text"
           >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
           this portfolio you will find a collection of my 
@@ -30,7 +30,7 @@
           <li>Angular/TypeScript</li>
           <li>RESTful API Integrations</li>
           <li>Unit Testing</li>
-          <li>Git Source Control</li>
+          <!-- <li>Git Source Control</li> -->
         </ul>
       </div>
     </div>
@@ -47,7 +47,7 @@
         </li>
         <li><a href="https://angular.io/">Learning - Angular</a></li>
         <li><a href="https://javascript.info/">Learning - JavaScript </a></li>
-        <li><a href="https://https://github.com/">Learning - GitHub </a></li>
+        <!-- <li><a href="https://https://github.com/">Learning - GitHub </a></li> -->
       </ul>
     </div>
 
@@ -60,7 +60,7 @@
       <div class="contact-items">
         <div class="contact-item first-item">
           <!-- <i class="bi bi-telephone-fill"> direct contact</i> -->
-          <h5>contacts</h5>
+          <!-- <h5>contacts</h5> -->
           <div class="item">
             <div class="contact-number">(+27)79 691 0468</div>
             <div class="contact-email">
@@ -72,7 +72,7 @@
         </div>
 
         <div class="contact-item">
-          <h5>social pages</h5>
+          <!-- <h5>social pages</h5> -->
           <div class="item">
             <div class="contact-pages">
               <i class="bi bi-linkedin"></i>
