--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -6,6 +6,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: $light-default-font-color;
+    background-color: $light-secondery-bg-color;
 }
 
 h1,
