--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,11 +1,12 @@
+@use 'abstracts' as *;
 $primary: #2c3e50;
 $light: #ecf0f1;
 $breakpoint: 768px;
 
 #main-navbar {
-
     .navbar {
   background-color: $primary;
+  // border-radius: $spacing-sm;
   color: $light;
   padding: 0.8rem;
   display: flex;
@@ -59,6 +60,7 @@ $breakpoint: 768px;
         padding: 1rem;
         color: $light;
         text-decoration: none;
+        //  border-radius: $spacing-sm;
 
         &:hover {
           background-color: red;
