--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -4,18 +4,20 @@
 
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
-    padding: $spacing-sm;
+    row-gap: $spacing-sm;
+    padding: $spacing-md;
+    // border-radius: $spacing-sm;
+    background-color: $light-primary-bg-color;
 
     .page-title {
         text-transform: uppercase;
-        font-size: $font-size-lg + 2px;
+        font-size: $font-size-xl;
         font-weight: bolder;
     }
 
     .page-heading {
         text-transform: uppercase;
-        font-size: $font-size-xl - 2px;
+        font-size: $font-size-xl - 4px;
     }
 
     .page-intro-buttons {
@@ -28,25 +30,44 @@
 
         .button {
             min-width: 130px;
-            padding: 7px 20px;
+            padding: 10px 20px;
             text-transform: uppercase;
             color: $light-neutral-font-color;
             cursor: pointer;
             border: none;
-            border-radius: 0px;
+            // border-radius: 7px;
         }
 
         .projects {
-            background-color: red;
+            background-color:orange;
+
             &:hover {
-                  background-color: brown;
+                background-color: brown;
             }
         }
 
         .contact {
             background-color: $light-secondery-font-color;
-              &:hover {
-                  background-color: $light-dark-bg-color;
+
+            &:hover {
+                background-color: $light-dark-bg-color;
+            }
+        }
+    }
+}
+
+
+
+@include respond-to("sm") {
+    #page-instroduction {
+        .page-heading {
+            font-size: $font-size-md + 3px;
+        }
+        .page-intro-buttons {
+            .button {
+                min-width: 112px;
+                padding: 8px 6px;
+                font-size: $font-size-sm;
             }
         }
     }
@@ -55,21 +76,8 @@
 @include respond-to("pre-sm") {
     #page-instroduction {
         .page-heading {
-            text-transform: uppercase;
-            font-size: $font-size-md + 4px;
-        }
-    }
-
-}
-
-@include respond-to("sm") {
-    #page-instroduction {
-        .page-intro-buttons {
-            .button {
-                min-width: 112px;
-                padding: 8px 6px;
-                font-size: $font-size-sm;
-            }
+            font-size: $font-size-md;
+            font-weight: bold;
         }
     }
 
