Added media query logic

--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -6,11 +6,11 @@
         introduction
       </h4>
       <p>
-        <!-- <img
+        <img
           class="introduction-img"
           src="./img/developer/yingi.png"
           alt="Site Logo"
-        /> -->
+        />
         <span class="introduction-text"
           >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
           this portfolio you will find a collection of my 
