--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -41,7 +41,7 @@
       <div class="card-icon">
         <i class="bi bi-github"></i>
       </div>
-      <div class="card-title">Source control</div>
+      <div class="card-title">GitHub</div>
       <div class="card-description">Tracking source changes and updates.</div>
       <div class="card-button">
         <button name="explore-4" class="explore" type="button">explore</button>
@@ -49,8 +49,8 @@
     </div>
   </div>
 
-  <div class="homepage-content-section horizontal-line">
-  </div>
+  <!-- <div class="homepage-content-section horizontal-line">
+  </div> -->
 
   <div class="homepage-content-section feeds-container">
  
@@ -66,7 +66,7 @@
             ><i class="bi bi-github"></i> GitHub</span
           >
           <span class="img-button view"
-            ><i class="bi bi-cursor"></i> website</span
+            ><i class="bi bi-cursor"></i> Website</span
           >
         </div>
       </div>
@@ -113,43 +113,37 @@
 
     <div class="news-feed-container feed">
       <div class="feed-title">news headlines</div>
+
+       <div class="weather-container">
+
+        <span class="weather-item title">Weather: </span>
+        <span class="weather-item"><i class="bi bi-calendar-minus"></i> 26-07-2025 </span>
+        <span class="weather-item"> <i class="bi bi-thermometer-half"></i> 22 °C</span> 
+        <span class="weather-item"> <i class="bi bi-cloud-sun"></i> Clear Sky </span>
+        <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span> 
+        
+      </div>
+
       <div class="news-container">
 
         <div class="news">
           <img class="news-img" src="./img/misc/19.jpg" alt="recent project" />
           <div class="news-headline">accident - n14</div>
-          <!-- <div class="button-container">
-            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
-          </div> -->
         </div>
 
         <div class="news">
           <img class="news-img" src="./img/misc/mchunu2.jpg" alt="recent project" />
           <div class="news-headline">mchunu scandal</div>
-          <!-- <div class="button-container">
-            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
-          </div> -->
         </div>
 
         <div class="news">
           <img class="news-img" src="./img/misc/108.jpg" alt="recent project" />
-          <div class="news-headline">scammers arrest</div>
-          <!-- <div class="button-container">
-            <span class="news-button more"><i class="bi bi-cursor"></i> more</span>
-          </div> -->
+          <div class="news-headline">more arrests</div>
         </div>
-        
-      </div>
-      <div class="weather-container">
-        <span class="weather-item title">Weather: </span>
-         <span class="weather-item"><i class="bi bi-calendar-minus"></i> 26-07-2025 </span>
-         <span class="weather-item"> <i class="bi bi-thermometer-half"></i> 22 °C</span> 
-          <span class="weather-item"> <i class="bi bi-cloud-sun"></i> Clear Sky </span>
-          <span class="weather-item"><i class="bi bi-droplet-half"></i> 22%</span> 
-        
         
       </div>
     </div>
     
   </div>
+
 </div>
