--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -88,7 +88,7 @@
         grid-template-columns: 1fr;
 
         .site-names {
-            padding-bottom: $spacing-md;
+            // padding-bottom: $spacing-md;
 
             .site-logo {
                 margin-right: 15px;
@@ -126,29 +126,31 @@
 
         .site-contact-details {
 
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            justify-content: space-between;
 
-            border-top: 1px solid $light-border-color;
-            padding-top: $spacing-sm + 4px;
+            display: none;
+            // display: grid;
+            // grid-template-columns: 2fr 1fr;
+            // justify-content: space-between;
 
-            .contact-details {
+            // border-top: 1px solid $light-border-color;
+            // padding-top: $spacing-sm + 4px;
 
-                flex-direction: column;
-                justify-content: start;
+            // .contact-details {
 
-                .theme-button {
-                    display: none;
-                }
-            }
+            //     flex-direction: column;
+            //     justify-content: start;
 
-            .current-weather {
+            //     .theme-button {
+            //         display: none;
+            //     }
+            // }
 
-                display: block;
-                text-align: right;
-                font-size: $font-size-md;
-            }
+            // .current-weather {
+
+            //     display: block;
+            //     text-align: right;
+            //     font-size: $font-size-md;
+            // }
         }
     }
 
