--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="card-title">ui Designs</div>
       <div class="card-description">
-        Designing responsive mobile-friendly UI .
+        Responsive and mobile-friendly UI.
       </div>
       <div class="card-button">
         <button name="explore-1" class="explore" type="button">explore</button>
@@ -19,7 +19,7 @@
       </div>
       <div class="card-title">restful api</div>
       <div class="card-description">
-        Integrating and processing real-time data
+         Fast and real-time data processing.
       </div>
       <div class="card-button">
         <button name="explore-2" class="explore" type="button">explore</button>
@@ -41,16 +41,13 @@
       <div class="card-icon">
         <i class="bi bi-github"></i>
       </div>
-      <div class="card-title">GitHub</div>
-      <div class="card-description">Tracking source changes and updates.</div>
+      <div class="card-title">Git & GitHub</div>
+      <div class="card-description">Tracking source code changes.</div>
       <div class="card-button">
         <button name="explore-4" class="explore" type="button">explore</button>
       </div>
     </div>
   </div>
-
-  <!-- <div class="homepage-content-section horizontal-line">
-  </div> -->
 
   <div class="homepage-content-section feeds-container">
  
