--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,10 +1,8 @@
 <div id="footer" class="footer">
   <div class="footer-top-section">
+
     <div class="footer-item item-introduction">
-      <h4>
-        <i class="bi bi-info-circle-fill"></i>
-        introduction
-      </h4>
+      <div class="footer-item-title">introduction</div>
       <p>
         <img
           class="introduction-img"
@@ -13,17 +11,14 @@
         />
         <span class="introduction-text"
           >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
-          this portfolio you will find a collection of my 
-          projects that showcase my skills.</span
+          this portfolio you will find a collection of my projects that showcase
+          my skills.</span
         >
       </p>
     </div>
 
     <div class="footer-item item-technology">
-      <h4>
-        <i class="bi bi-code-slash"></i>
-        technology stack
-      </h4>
+      <div class="footer-item-title">technology stack</div>
       <div class="items-wrapper">
         <ul class="tech-list">
           <li>Responsive UI Designs</li>
@@ -36,10 +31,7 @@
     </div>
 
     <div class="footer-item item-resources">
-      <h4>
-        <i class="bi bi-stack-overflow"></i>
-        resources
-      </h4>
+      <div class="footer-item-title">resources</div>
       <ul class="resources-list">
         <li><a href="https://sass-lang.com/">Learning - SCSS</a></li>
         <li>
@@ -52,15 +44,11 @@
     </div>
 
     <div class="footer-item item-contact-details">
-      <h4>
-        <i class="bi bi-person-lines-fill"></i>
-        contact details
-      </h4>
+      <div class="footer-item-title">contact details</div>
 
       <div class="contact-items">
-        <div class="contact-item first-item">
-          <!-- <i class="bi bi-telephone-fill"> direct contact</i> -->
-          <!-- <h5>contacts</h5> -->
+
+        <div class="contact-item">
           <div class="item">
             <div class="contact-number">(+27)79 691 0468</div>
             <div class="contact-email">
@@ -72,7 +60,6 @@
         </div>
 
         <div class="contact-item">
-          <!-- <h5>social pages</h5> -->
           <div class="item">
             <div class="contact-pages">
               <i class="bi bi-linkedin"></i>
@@ -82,6 +69,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
