created the project page-content grid-layout

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -1,1 +1,194 @@
-<p>projects works!</p>
+<div class="projectspage-container" id="projectspage-container">
+  <section class="recent-project">
+    <div class="section-heading">project details</div>
+
+    <div class="project-details">
+      <div class="project-img project-detail-item">
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-mabunda.png"
+            alt="recent project"
+          />
+        </div>
+
+        <div class="project-name">
+           mabunda group
+        </div>
+        <div class="project-status">
+          <span class="current-status git-status"
+            ><i class="bi bi-check-circle-fill"></i> GitHub</span
+          >
+          <span class="current-status complete-status"
+            ><i class="bi bi-check-circle-fill"></i> Completed</span
+          >
+          <span class="current-status online-status"
+            ><i class="bi bi-check-circle-fill"></i> Online</span
+          >
+        </div>
+      </div>
+      <div class="project-description project-detail-item">
+        <div class="item-heading">project description</div>
+        <div class="item-details">
+          <p>
+            A business website developed using latest web technologies such as
+            HTML5, SCSS, Bootstrap 5, Font Awesome, Angular, RxJs and APIs.
+          </p>
+          <p>
+            The UI is designed to adopt various device screen
+            sizes, ranging from mobile phones to large sizes.
+          </p>
+          
+        </div>
+      </div>
+      <div class="project-tech-stack project-detail-item">
+        <div class="item-heading">Implemented concepts</div>
+        <div class="item-details">
+          <ul>
+            <li><i class="bi bi-caret-right-fill"></i> Responsive UI Design</li>
+            <li><i class="bi bi-caret-right-fill"></i> Angular Framework</li>
+            <li>
+              <i class="bi bi-caret-right-fill"></i> RESTful API Integration
+            </li>
+            <li><i class="bi bi-caret-right-fill"></i> Unit Tests</li>
+            <li>
+              <i class="bi bi-caret-right-fill"></i> GitHub Source Control
+            </li>
+            <li>
+              <i class="bi bi-caret-right-fill"></i> Search Engine Optimization
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="project-features project-detail-item">
+        <div class="item-heading">features</div>
+        <div class="item-details">
+          <ul>
+            <li>
+              <i class="bi bi-check-square-fill"></i> Geo-location-based weather
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i> Projects Photo Gallery
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i> Integrated Google Maps
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i> Social media share buttons
+            </li>
+            <li>
+              <i class="bi bi-check-square-fill"></i> Integrated Contact Form
+            </li>
+
+            <li>
+              <i class="bi bi-check-square-fill"></i> Toggle themes (Dark/Light)
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="featured-projects">
+    <div class="section-heading">featured projects</div>
+
+    <div class="section-statement">
+      Explore some of my recent project that were completed successfully. please
+      visit my GitHub repository to explore the rest of other projects.
+    </div>
+
+    <div class="cards-section">
+      <div class="project-card">
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-mabunda.png"
+            alt="recent project"
+          />
+        </div>
+
+        <div class="project-name">mabunda group</div>
+        <div class="project-status">
+          <span class="current-status git-status"
+            ><i class="bi bi-check-circle-fill"></i> GitHub</span
+          >
+          <span class="current-status complete-status"
+            ><i class="bi bi-check-circle-fill"></i> Completed</span
+          >
+          <span class="current-status online-status"
+            ><i class="bi bi-check-circle-fill"></i> Online</span
+          >
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-vloc.png"
+            alt="recent project"
+          />
+        </div>
+
+        <div class="project-name">vehicle locator system</div>
+        <div class="project-status">
+          <span class="current-status git-status"
+            ><i class="bi bi-check-circle-fill"></i> GitHub</span
+          >
+          <span class="current-status complete-status"
+            ><i class="bi bi-check-circle-fill"></i> Completed</span
+          >
+          <span class="current-status online-status"
+            ><i class="bi bi-check-circle-fill"></i> Online</span
+          >
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-mabunda.png"
+            alt="recent project"
+          />
+        </div>
+
+        <div class="project-name">km. monakali attorneys</div>
+        <div class="project-status">
+          <span class="current-status git-status"
+            ><i class="bi bi-check-circle-fill"></i> GitHub</span
+          >
+          <span class="current-status complete-status"
+            ><i class="bi bi-check-circle-fill"></i> Completed</span
+          >
+          <span class="current-status online-status"
+            ><i class="bi bi-check-circle-fill"></i> Online</span
+          >
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-image-container">
+          <img
+            class="project-img"
+            src="./img/projects/prj-masterpage.png"
+            alt="recent project"
+          />
+        </div>
+
+        <div class="project-name">masterpage grid-layout</div>
+        <div class="project-status">
+          <span class="current-status git-status"
+            ><i class="bi bi-check-circle-fill"></i> GitHub</span
+          >
+          <span class="current-status complete-status"
+            ><i class="bi bi-check-circle-fill"></i> Completed</span
+          >
+          <span class="current-status online-status"
+            ><i class="bi bi-check-circle-fill"></i> Online</span
+          >
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
