--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -18,10 +18,10 @@
     </div>
 
     <div class="footer-item item-technology">
-      <div class="footer-item-title">technology stack</div>
+      <div class="footer-item-title"> skills set</div>
       <div class="items-wrapper">
         <ul class="tech-list">
-          <li>Responsive UI Designs</li>
+          <li>Responsive UI Design</li>
           <li>Angular/TypeScript</li>
           <li>RESTful API Integrations</li>
           <li>Unit Testing</li>
