--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -17,8 +17,9 @@
 
     .page-heading {
         text-transform: uppercase;
-        font-size: $font-size-xl - 4px;
+        font-size: $font-size-md + 4px;
         color: $comp-default-font-color;
+        font-weight: 100;
     }
 
     .page-intro-buttons {
